input boxes are spilling out to the right on a samsung note phone set a width to prevent overspill

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ nav li{
     width: 80px;
     border-radius: 50%;
     border: 2px solid #ffffff;
-    background: crimson;
+    background: #dc143c;
 }
 .bali .price-outer{
     margin-top: -20px;
@@ -193,7 +193,7 @@ nav li{
     border-top-left-radius: 30%;
     border-bottom-right-radius: 30%;
     background-color: 	#8debff;
-    border: 3px solid white;
+    border: 3px solid #ffffff;
     margin: 15px auto;
     padding-top: 40px;
 }
@@ -307,7 +307,8 @@ img{
     text-transform: uppercase;
 }
 .input-box{
-    border: 2px solid white;
+    width: 230px;
+    border: 2px solid #ffffff;
     border-radius: 5px;
     padding: 8px;
 }
@@ -323,7 +324,7 @@ textarea{
     text-transform: uppercase;
 }
 #submit-button:hover{
-    background-color: rgb(236, 227, 142);
+    background-color: #acacac;
 }
 
 /*---------------------------------------------------------------------------------------------------------Thank You Page------------------*/
